--- a/main.css
+++ b/main.css
@@ -1,1 +1,14 @@
 /* transitions */
+
+.btn {
+  border: 2px solid black;
+  padding: 10px 20px;
+  display: inline-block;
+  margin-top: 30px;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.btn:hover {
+  background-color: olivedrab;
+  color: white;
+}
