--- a/main.css
+++ b/main.css
@@ -5,10 +5,9 @@
   padding: 10px 20px;
   display: inline-block;
   margin-top: 30px;
-  transition: background-color 0.5s, color 0.5s;
+  transition: transform 3s ease-out;
 }
 
 .btn:hover {
-  background-color: olivedrab;
-  color: white;
+  transform: translateX(100px);
 }
