--- a/main.css
+++ b/main.css
@@ -5,9 +5,10 @@
   padding: 10px 20px;
   display: inline-block;
   margin-top: 30px;
-  transition: transform 3s ease-out;
+  transition: background-color 2s ease-in 1s, color 2s linear 3s;
 }
 
 .btn:hover {
-  transform: translateX(100px);
+  background-color: olive;
+  color: orange;
 }
