--- a/main.css
+++ b/main.css
@@ -1,14 +1,1 @@
-/* transitions */
-
-.btn {
-  border: 2px solid black;
-  padding: 10px 20px;
-  display: inline-block;
-  margin-top: 30px;
-  transition: background-color 2s ease-in 1s, color 2s linear 3s;
-}
-
-.btn:hover {
-  background-color: olive;
-  color: orange;
-}
+/* transform */
